tests/NormalTests/paczka1/small_fuzzy/48661404.err
Error in line 4: A296 S636 94,4
Error in line 2: zm1g3MQOxD A296 72,3
